--- a/src/components/tab/tab.css
+++ b/src/components/tab/tab.css
@@ -34,7 +34,7 @@ button:focus {
 #appTitle {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-size: 60px;
+  font-size: 40px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: skyblue;
